gcc/testsuite/g++.dg/parse/crash62.C
// PR c++/57352

struct x
{
  operator class {} ();  // { dg-error "types|expected" }
};
